--- a/repos/rockpaperscissors/index.html
+++ b/repos/rockpaperscissors/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <button onclick="playRound('rock', getComputerChoice())">Rock</button>
+    <button onclick="playRound('paper', getComputerChoice())">Paper</button>
+    <button onclick="playRound('scissors', getComputerChoice())">Scissors</button>
+    <div id="interface"></div>
 </body>
 </html>
